--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
 
 
 <form action="/action_page.php">
-   
+   <label><b>DOB</b><span class="required"></span></label><br>
     <input type="date" id="birthday" name="birthday">
     
   </form>
+  <form action="/action_page.php">
+    <label><b>Phone</b><span class="required"></span></label><br>
+     <input type="integer" id="number" name="integer">
+     
+   </form>
